Fixed overflow issue

--- a/styles.scss
+++ b/styles.scss
@@ -23,6 +23,7 @@ h1 {
   margin-top: 2px;
   font-size: 2em;
   line-height: 4em;
+  overflow: auto;
 
 
 }
